update to r90868 (April 1, 2019 version of trunk)

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -9,7 +9,7 @@ local_path = components/cice
 required = True
 
 [cime]
-tag = cime5.7.9
+tag = ctsm/ctsm1.0/cime5.7.9/n01
 protocol = git
 repo_url = https://github.com/ESMCI/cime
 local_path = cime
@@ -24,9 +24,9 @@ externals = Externals_CISM.cfg
 required = True
 
 [clm]
-tag = ctsm1.0.dev027
+tag = ctsm1.0.dev030.se_grids
 protocol = git
-repo_url = https://github.com/ESCOMP/ctsm
+repo_url = https://github.com/fischer-ncar/ctsm
 local_path = components/clm
 externals = Externals_CLM.cfg
 required = True
